--- a/Web/src/components/pages/Dashboard/dashboard.scss
+++ b/Web/src/components/pages/Dashboard/dashboard.scss
@@ -13,4 +13,15 @@
             font-size: 24px;
         }
     }
+
+}
+
+.kb-addtocard {
+    .ant-row {
+        padding-bottom: 8px;
+        .ant-btn {
+            width: 100%;
+            text-align: left;
+        }
+    }
 }
